--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,8 @@
     #00000080
   );
 
+  --color-white: #ffffff;
+
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
@@ -87,12 +89,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--color-white);
 }
 
 a {
